--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "better-sqlite3": "^11.10.0",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
+    "sass": "^1.89.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
